elfo/tests/ui/msg_request_syntax_for_regular.rs
use elfo::{message, msg, Envelope};

#[message]
struct SomeEvent;

fn test(envelope: Envelope) {
    msg!(match envelope {
        (SomeEvent, token) => {}
    });
}

fn main() {}
